Afegit els enunciats a EDOS I fins el Lema de Wintner

--- a/parts/EA.tex
+++ b/parts/EA.tex
@@ -1734,7 +1734,7 @@
 		Si \(a\leq b\) implica \(b=a\) per a tot \(b\in{B}\) direm que \(a\) és maximal per \({B}\).
 	\end{definition}
 	\begin{axiom}[Lema de Zorn]
-		\label{lemma de Zorn}
+		\label{lema de Zorn}
 		Sigui \(\mathcal{A}\) amb \(\leq\) una cadena tal que per a tot subconjunt \(\mathcal{C}\subseteq\mathcal{A}\) la cadena \(\mathcal{C}\) té alguna cota superior. Aleshores \(\mathcal{A}\) té algun element maximal.
 	\end{axiom}
 	\begin{theorem}
@@ -1747,7 +1747,7 @@
 			\[J=\bigcup_{I\in\mathcal{C}}I\]
 			i veiem que \(J\) és un ideal de \(R\), ja que si \(x,y\in J\) tenim \(x\in J_{1}\) i \(y\in J_{2}\) per a certs \(J_{1},J_{2}\in\mathcal{C}\). Ara bé, si \(J_{2}\subseteq J_{1}\) tenim que \(x-y\in J_{1}\), i per tant \(x-y\in J\), i si \(J_{1}\subseteq J_{2}\) tenim que \(x-y\in J_{2}\), i per tant \(x-y\in J\). Si prenem \(x\in J\) i \(r\in R\) aleshores \(r\cdot x\in J\), ja que tenim \(x\in J_{1}\) per a cert \(J_{1}\in\mathcal{C}\), i per tant \(r\cdot x\in J_{1}\), i en particular \(r\cdot x\in J\). Per tant per la definició d'\myref{def:ideal d'un anell} tenim que \(J\) és un ideal de \(R\). Per veure que \(J\in A\) hem de comprovar que \(J\neq R\). Ho fem per contradicció. Suposem que \(J=R\). Aleshores \(1\in J\), i per tant \(1\in I\) per a cert \(I\in A\), però això no pot ser ja que si \(I\in A\) s'ha de complir \(I\neq A\), i per tant \(1\notin I\). Per tant \(J\neq R\) i tenim que \(J\in A\).
 			
-			Ara bé, pel \myref{lemma de Zorn} tenim que existeix \(M\in\mathcal{C}\) tal que per a tot \(I\in\mathcal{C}\) tenim \(I\subseteq M\) i per la definició d'\myref{def:ideal maximal} tenim que \(M\) és un ideal maximal de \((R,+,\cdot)\).
+			Ara bé, pel \myref{lema de Zorn} tenim que existeix \(M\in\mathcal{C}\) tal que per a tot \(I\in\mathcal{C}\) tenim \(I\subseteq M\) i per la definició d'\myref{def:ideal maximal} tenim que \(M\) és un ideal maximal de \((R,+,\cdot)\).
 		\end{proof}
 	\end{theorem}
 	\subsection{Divisibilitat}
