--- a/parts/EDOS1.tex
+++ b/parts/EDOS1.tex
@@ -471,6 +471,32 @@
 			%TODO
 		\end{proof}
 	\end{proposition}
+	\begin{proposition}
+		\label{prop:la solució improrrogable és única}
+		Siguin \(\Omega\subseteq\mathbb{R}\times\mathbb{R}^{n}\) un obert i \(f\colon\Omega\longrightarrow\mathbb{R}^{n}\) una funció tal que per a tot \((t_{0},x_{0})\) de \(\Omega\) el problema de Cauchy
+		\begin{equation}
+			\label{prop:la solució improrrogable és única:eq1}
+			\begin{cases*}
+				\displaystyle \frac{\partial u(t)}{\partial t}=f(t,u(t)) \\
+				\displaystyle u(t_{0})=x_{0}
+			\end{cases*}
+		\end{equation}
+		té una única solució. Aleshores per a cada \((t_{0},x_{0})\) de \(\Omega\) el problema de Cauchy \eqref{prop:les solucions improrrogables estàn definides sobre intervals oberts} té una única solució improrrogable.
+		\begin{proof}
+			%TODO
+		\end{proof}
+	\end{proposition}
+	\begin{theorem}[Lema de Wintner]
+		\labelname{lema de Wintner}\label{thm:Lema de Wintner}
+		Siguin \(\Omega\subseteq\mathbb{R}\times\mathbb{R}^{n}\) un obert i \(f\colon\Omega\longrightarrow\mathbb{R}^{n}\) una funció contínua, \((\varphi,I)\) una solució de l'equació diferencial
+		\[\frac{\partial u(t)}{\partial t}=f(t,u(t))\]
+		i \((b,y)\) un punt d'acumulació de la gràfica de \(\varphi\) en \(\Omega\). Aleshores
+		\[\lim_{t\to b}\varphi(t)=y\]
+		i existeix una solució \((v,J)\) de l'equació diferencial tal que \(I\subseteq J\) i \(b\in J\).
+		\begin{proof}
+			%TODO
+		\end{proof}
+	\end{theorem}
 	
 	
 	
